--- a/.env
+++ b/.env
@@ -30,3 +30,4 @@ APP_SECRET=d163c4eae8249c198789e232f7e39f1b
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+DATABASE_URL=mysql://root@127.0.0.1:3306/llibresdavid
