--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,14 +2,24 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         users_in_memory: { memory: null }
+        user_provider:
+            entity:
+                class: App\Entity\Usuari
+                property: login
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            anonymous: ~
             lazy: true
             provider: users_in_memory
+            form_login:
+                provider: user_provider
+                login_path: login
+                check_path: login
+            logout:
+                path: /logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -20,5 +30,16 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/llibre/nou, roles: ROLE_ADMIN}
+        - { path: ^/llibre/editar, roles: ROLE_ADMIN}
+        - { path: ^/, roles: [ROLE_USER, ROLE_ADMIN] }
+    encoders:
+        App\Entity\Usuari:
+            algorithm: bcrypt
+            cost: 12
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+
+
+   
